better file modification
